# broadcast-clock

./: .gitignore  README.md
broadcast_clock/: broadcast_clock.kicad_pcb  broadcast_clock.kicad_sch  display_drivers.kicad_sch  fp-info-cache  led_display.kicad_sch  led_matrices.kicad_sch  mcu.kicad_sch  rtc.kicad_sch
drawings/: .gitignore  back_panel.c2d  back_panel_template.dxf  back_plate.dxf  clock_face.backup.dxf  clock_face.dxf  clock_panels.dxf  complete_assembly-circuit_board.stl.REMOVED.git-id  complete_assembly.20240613-233358.FCBak.REMOVED.git-id  complete_assembly.FCStd.REMOVED.git-id  complete_assembly.ini  complete_assembly.pov  complete_assembly.stl.REMOVED.git-id  complete_assembly_meshes.inc.REMOVED.git-id  edge_cuts.dxf  front_panel.dxf  front_panel_template.dxf  kicad_pcb.txt  mounting_holes.dxf  printed_circuit_board.FCStd  regen_led_layout.js  user_1.dxf  ~clock_panels.dxf
drawings/complete_assembly/: complete_assembly.psd
firmware/broadcast-clock/: CMakeLists.txt  crashlog.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/broadcast-clock/main/: CMakeLists.txt  app_main.cpp  gpio_mapping.hpp  main.cpp  main.hpp  secrets.hpp
firmware/broadcast-clock/main/components/: ambient_sensor.cpp  ambient_sensor.hpp  application.cpp  application.hpp  beeper.cpp  beeper.hpp  captive_portal_dns.cpp  captive_portal_dns.hpp  captive_portal_http.cpp  captive_portal_http.hpp  clock_face.cpp  clock_face.hpp  clock_status.cpp  clock_status.hpp  configuration.cpp  configuration.hpp  dial.cpp  dial.hpp  dotmatrix.cpp  dotmatrix.hpp  http_server.cpp  http_server.hpp  i_gnss_state.hpp  i_gnss_ubx.hpp  i_indicators.hpp  lea_m8t.cpp  lea_m8t.hpp  lea_m8t.old.cpp  lea_m8t.old.hpp  ntp_server.cpp  ntp_server.hpp  ubx_types.hpp  wifi.cpp  wifi.hpp
firmware/broadcast-clock/main/semaphores/: mutex.cpp  mutex.hpp
firmware/broadcast-clock/main/utils/: fletcher8.hpp  from_hex.hpp  get_query_field.hpp  hexdump.hpp  micro_delay.hpp  replace_substring.hpp  span_to_timespec.hpp
hardware/: #auto_saved_files#  .gitignore  broadcast_clock.kicad_pcb  broadcast_clock.kicad_pcb.bak  broadcast_clock.kicad_prl  broadcast_clock.kicad_pro  broadcast_clock.kicad_sch  broadcast_clock.step.REMOVED.git-id  broadcast_clock_bom.csv  broadcast_clock_bom.numbers  clock_face.kicad_sch  fp-info-cache  gps_timing_module.kicad_sch  led_dial.kicad_sch  led_display.kicad_sch  led_matrices.kicad_sch  mcu.kicad_sch  mcu_2.kicad_sch  power_supply.kicad_sch  ~broadcast_clock.kicad_pcb.lck  ~broadcast_clock.kicad_sch.lck
hardware/bom/: bill_of_material_broadcast_clock.xls
hardware/gfx/: logo.dxf
hardware/old/: broadcast_clock.kicad_pcb  broadcast_clock.kicad_prl  broadcast_clock.kicad_pro  led_dial.kicad_sch  (+7 more)
(+33 files in other folders)
