idf_component_register( SRCS "app_main.cpp"
                             "semaphores/mutex.cpp"
                             "components/application.cpp"
                             "components/configuration.cpp"
                             "components/clock_face.cpp"
                             "components/beeper.cpp"
                             "components/lea_m8t.cpp"
                             "components/ntp_server.cpp"
                             "components/ambient_sensor.cpp"
                             "components/wifi.cpp"
                             "components/captive_portal_dns.cpp"
                             "components/http_server.cpp"
                             "components/dial.cpp"
                             "components/clock_status.cpp"
                             "components/dotmatrix.cpp"
                INCLUDE_DIRS "."
              EMBED_TXTFILES "../resources/html/control_panel.html"
                             "../resources/html/timers_page.html"
                             "../resources/html/exit_page.html"
                             "../resources/html/styles.css"
                             "../resources/gfx/favicon.ico" )
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCRON_USE_LOCAL_TIME" )
